fix overflow in sidenav

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body,html{
     height: 100vh;
     width: 100%;
